Changes for VBA7+Win64

--- a/Classes/ColorDialog.cls
+++ b/Classes/ColorDialog.cls
@@ -39,6 +39,7 @@ Private Const CDERR_NOHINSTANCE     As Long = &H4
 Private Const CDERR_LOADSTRFAILURE  As Long = &H5
 Private Const CDERR_FINDRESFAILURE  As Long = &H6
 Private Const CDERR_LOADRESFAILURE  As Long = &H7
+Private Const CDERR_LOCKRESFAILURE  As Long = &H8
 Private Const CDERR_MEMALLOCFAILURE As Long = &H9
 Private Const CDERR_MEMLOCKFAILURE  As Long = &HA
 Private Const CDERR_NOHOOK          As Long = &HB
@@ -249,17 +250,18 @@ Private Sub CheckMessError()
     If hr = 0 Then Exit Sub
     Dim s As String
     Select Case hr
-    Case CDERR_DIALOGFAILURE:   s = "DIALOGFAILURE"
-    Case CDERR_FINDRESFAILURE:  s = "FINDRESFAILURE"
-    Case CDERR_MEMLOCKFAILURE:  s = "MEMLOCKFAILURE"
-    Case CDERR_INITIALIZATION:  s = "INITIALIZATION"
-    Case CDERR_NOHINSTANCE:     s = "NOHINSTANCE"
-    Case CDERR_NOHOOK:          s = "NOHOOK"
-    Case CDERR_LOADRESFAILURE:  s = "LOADRESFAILURE"
-    Case CDERR_NOTEMPLATE:      s = "NOTEMPLATE"
-    Case CDERR_LOADSTRFAILURE:  s = "LOADSTRFAILURE"
     Case CDERR_STRUCTSIZE:      s = "STRUCTSIZE"
+    Case CDERR_INITIALIZATION:  s = "INITIALIZATION"
+    Case CDERR_NOTEMPLATE:      s = "NOTEMPLATE"
+    Case CDERR_NOHINSTANCE:     s = "NOHINSTANCE"
+    Case CDERR_LOADSTRFAILURE:  s = "LOADSTRFAILURE"
+    Case CDERR_FINDRESFAILURE:  s = "FINDRESFAILURE"
+    Case CDERR_LOADRESFAILURE:  s = "LOADRESFAILURE"
+    Case CDERR_LOCKRESFAILURE:  s = "LOCKRESFAILURE"
     Case CDERR_MEMALLOCFAILURE: s = "MEMALLOCFAILURE"
+    Case CDERR_MEMLOCKFAILURE:  s = "MEMLOCKFAILURE"
+    Case CDERR_NOHOOK:          s = "NOHOOK"
+    Case CDERR_DIALOGFAILURE:   s = "DIALOGFAILURE"
     End Select
     If Len(s) Then
         MsgBox s
