--- a/Classes/OpenFileDialog.cls
+++ b/Classes/OpenFileDialog.cls
@@ -15,51 +15,18 @@ Attribute VB_Ext_KEY = "SavedWithClassBuilder6" ,"Yes"
 Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 'Public NotInheritable Class OpenFileDialog
 '          Inherits System.Windows.Forms.FileDialog
-Option Explicit '490 Zeilen
-Private Declare Function GetOpenFileName Lib "comdlg32.dll" Alias "GetOpenFileNameW" (pOpenfilename As OPENFILENAMEW) As Long
-'Private Declare Function GetOpenFileNamePreview Lib "msvfw32.dll" (ByRef lpofn As OPENFILENAME) As Long
-Private Declare Function GetActiveWindow Lib "user32.dll" () As Long
-Private Declare Function GetDesktopWindow Lib "user32.dll" () As Long
-Private Declare Function CreateWindowExA Lib "user32.dll" (ByVal dwExStyle As Long, ByVal lpClassName As String, ByVal lpWindowName As String, ByVal dwStyle As Long, ByVal X As Long, ByVal y As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hWndParent As Long, ByVal hMenu As Long, ByVal hInstance As Long, ByRef lpParam As Any) As Long
-Private Declare Function DestroyWindow Lib "user32.dll" (ByVal hwnd As Long) As Long
-
-'Private Declare Function GetWindowRect Lib "user32.dll" (ByVal hwnd As Long, ByRef lpRect As WinRect) As Long
-'Private Const WS_CHILD As Long = &H40000000
-'Private Const WS_VISIBLE As Long = &H10000000
-
-'Private Type WinRect
-'  Left As Long
-'  Top As Long
-'  Right As Long
-'  Bottom As Long
-'End Type
-#If Not VBA7 Then
-    Private Enum LongPtr
-        [_]
-    End Enum
-#End If
-Private Type OPENFILENAMEW
-  lStructSize       As Long
-  hwndOwner         As LongPtr
-  hInstance         As LongPtr
-  lpstrFilter       As LongPtr 'String
-  lpstrCustomFilter As LongPtr 'String
-  nMaxCustFilter    As Long
-  nFilterIndex      As Long
-  lpstrFile         As LongPtr 'String
-  nMaxFile          As Long
-  lpstrFileTitle    As LongPtr 'String
-  nMaxFileTitle     As Long
-  lpstrInitialDir   As LongPtr 'String
-  lpstrTitle        As LongPtr 'String
-  flags             As Long
-  nFileOffset       As Integer
-  nFileExtension    As Integer
-  lpstrDefExt       As LongPtr 'String
-  lCustData         As Long
-  lpfnHook          As LongPtr 'Long
-  lpTemplateName    As String
-End Type
+'     Member von: System.Windows.Forms
+Option Explicit '490 Zeilen   '2021-08-07: 613 Zeilen
+'Diese Klasse funktioniert unter VB6 genauso wie die
+'Klasse OpenFileDialog von .NET
+'also die wichtigsten Sachen
+'CommonDialog
+'Microsoft Common Dialog Control 6.0 (SP6)
+'in: \System32\COMDLG32.OCX
+'ist nur eine dünne Kapselung der dll "comdlg32.dll"
+'deshalb lieber gleich die dll-verwenden, hat den Vorteil, daß comdlg32.ocx
+'nicht mit dem Programm ausgeliefert werden muß,
+'da die comdlg32.dll Bestandteil des Betriebssystems ist
 
 Private Const OFN_SHAREWARN             As Long = 0&
 Private Const OFN_SHARENOWARN           As Long = 1&
@@ -101,44 +68,106 @@ Private Const OFN_USEMONIKERS           As Long = &H1000000
 Private Const OFN_DONTADDTORECENT       As Long = &H2000000
 Private Const OFN_FORCESHOWHIDDEN       As Long = &H10000000
 
-'Diese Klasse funktioniert unter VB6 genauso wie die
-'Klasse OpenFileDialog von .NET
-'also die wichtigsten Sachen
-'
-'CommonDialog
-'Microsoft Common Dialog Control 6.0 (SP6)
-'in: \System32\COMDLG32.OCX
-'ist nur eine dünne Kapselung der dll "comdlg32.dll"
-'deshalb lieber gleich die dll-verwenden, hat den Vorteil, daß comdlg32.ocx
-'nicht mit dem Programm ausgeliefert werden muß,
-'da die comdlg32.dll Bestandteil des Betriebssystems ist
+'Private Const WS_CHILD   As Long = &H40000000
+'Private Const WS_VISIBLE As Long = &H10000000
+'Public Enum DialogResult 'auch in OpenFileDialog hier aktivieren wenn nur SaveFileDialog gebraucht wird
+'    DialogResultNone = 0
+'    DialogResultOK = 1
+'    DialogResultCancel = 2
+'    DialogResultAbort = 3
+'    DialogResultRetry = 4
+'    DialogResultIgnore = 5
+'    DialogResultYes = 6
+'    DialogResultNo = 7
+'End Enum
+'Private Type WinRect
+'  Left   As Long
+'  Top    As Long
+'  Right  As Long
+'  Bottom As Long
+'End Type
+#If VBA7 = 0 Then
+    Private Enum LongPtr
+        [_]
+    End Enum
+#End If
+Private Type OPENFILENAMEW                 ' x86    ' x64
+    lStructSize       As Long              '   4    '   4 + 4Padb
+    hwndOwner         As LongPtr ' Long    '   4    '   8
+    hInstance         As LongPtr ' Long    '   4    '   8
+    lpstrFilter       As LongPtr ' String  '   4    '   8
+    lpstrCustomFilter As LongPtr ' String  '   4    '   8
+    nMaxCustFilter    As Long              '   4    '   4
+    nFilterIndex      As Long              '   4    '   4
+    lpstrFile         As LongPtr ' String  '   4    '   8
+    nMaxFile          As Long              '   4    '   4 + 4Padb
+    lpstrFileTitle    As LongPtr ' String  '   4    '   8
+    nMaxFileTitle     As Long              '   4    '   4 + 4Padb
+    lpstrInitialDir   As LongPtr ' String  '   4    '   8
+    lpstrTitle        As LongPtr ' String  '   4    '   8
+    flags             As Long              '   4    '   4
+    nFileOffset       As Integer           '   2    '   2
+    nFileExtension    As Integer           '   2    '   2
+    lpstrDefExt       As LongPtr ' String  '   4    '   8
+    lCustData         As LongPtr ' Long    '   4    '   8
+    lpfnHook          As LongPtr ' Long    '   4    '   8
+    lpTemplateName    As LongPtr ' String  '   4    '   8
+End Type                               ' Sum: 76    ' 136
+
+#If VBA7 Then
+Private Declare PtrSafe Function GetOpenFileNameW Lib "comdlg32" (ByRef pOpenfilename As OPENFILENAMEW) As Long
+Private Declare PtrSafe Function GetActiveWindow Lib "user32" () As Long
+'Private Declare PtrSafe Function GetDesktopWindow Lib "user32" () As LongPtr
+'Private Declare PtrSafe Function GetOpenFileNamePreview Lib "msvfw32.dll" (ByRef lpofn As OPENFILENAME) As Long
+'Private Declare PtrSafe Function CreateWindowExW Lib "user32" (ByVal dwExStyle As Long, ByVal lpClassName As LongPtr, ByVal lpWindowName As LongPtr, ByVal dwStyle As Long, ByVal X As Long, ByVal y As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hWndParent As LongPtr, ByVal hMenu As LongPtr, ByVal hInstance As LongPtr, ByRef lpParam As Any) As Long
+'Private Declare PtrSafe Function DestroyWindow Lib "user32" (ByVal hwnd As LongPtr) As Long
+'Private Declare PtrSafe Function GetWindowRect Lib "user32" (ByVal hwnd As Long, ByRef lpRect As WinRect) As Long
+#Else
+Private Declare Function GetOpenFileNameW Lib "comdlg32" (pOpenfilename As OPENFILENAMEW) As Long
+Private Declare Function GetActiveWindow Lib "user32" () As Long
+'Private Declare Function GetDesktopWindow Lib "user32" () As Long
+'Private Declare Function GetOpenFileNamePreview Lib "msvfw32.dll" (ByRef lpofn As OPENFILENAME) As Long
+'Private Declare Function CreateWindowExW Lib "user32" (ByVal dwExStyle As Long, ByVal lpClassName As LongPtr, ByVal lpWindowName As LongPtr, ByVal dwStyle As Long, ByVal X As Long, ByVal y As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hWndParent As LongPtr, ByVal hMenu As LongPtr, ByVal hInstance As LongPtr, ByRef lpParam As Any) As Long
+'Private Declare Function DestroyWindow Lib "user32" (ByVal hwnd As LongPtr) As Long
+'Private Declare Function GetWindowRect Lib "user32" (ByVal hwnd As Long, ByRef lpRect As WinRect) As Long
+#End If
+
 'Private Base As New FileDialog
-Private mAddExtension As Boolean
+Private mAddExtension     As Boolean
 Attribute mAddExtension.VB_VarHelpID = -1
-'Private mCheckFileExists As Boolean
-'Private mCheckPathExists As Boolean
-Private mDefaultExt As String
+'Private mCheckFileExists  As Boolean
+'Private mCheckPathExists  As Boolean
+Private mDefaultExt       As String
 Attribute mDefaultExt.VB_VarHelpID = -1
 'Private mDereferenceLinks As Boolean
-Private mFileName As String
+Private mFileName         As String
 Attribute mFileName.VB_VarHelpID = -1
-Private mFileNames As Collection    'ReadOnly nur Get
-Private mFilter As String
+Private mFileNames        As Collection 'List Of FileName   'ReadOnly nur Get
+Private mFilter           As String
 Attribute mFilter.VB_VarHelpID = -1
-Private mFilterIndex As Long
+Private mFilterIndex      As Long
 Attribute mFilterIndex.VB_VarHelpID = -1
 Private mInitialDirectory As String
-'Private mShowReadOnly As Boolean
-Private mTitle As String
+'Private mReadOnlyChecked  As Boolean
+'Private mRestoreDirectory As Boolean
+'Private mShowHelp         As Boolean
+'Private mShowReadOnly     As Boolean
+Private mTitle            As String
 Attribute mTitle.VB_VarHelpID = -1
-Private mValidateNames As Boolean
+Private mValidateNames    As Boolean
 Attribute mValidateNames.VB_VarHelpID = -1
-Private mFlags As Long
-Private mTag As Variant
+Private mFlags            As Long
+Private mTag              As Variant
+
+'Public Event FileOk(ByVal sender As Object, ByVal e As System.ComponentModel.CancelEventArgs)
+'Public Event FileOk(ByVal sender As Object, ByVal e As System.CancelEventArgs)
 
 Private Sub Class_Initialize()
     Call Reset
 End Sub
+'Protected Sub OnFileOk(ByVal e As System.ComponentModel.CancelEventArgs)
+
+'Public Overrides Sub Reset()
 Public Sub Reset()
     'Call InitFlags
     mFlags = mFlags Or OFN_EXPLORER
@@ -147,13 +176,11 @@ Public Sub Reset()
     mFlags = mFlags Or OFN_PATHMUSTEXIST
     
     mAddExtension = True
-    'Set mFileNames = New Collection  'ReadOnly nur Get
-    Call FNsColInitClear
+    FileNames_Clear
     mFilterIndex = 1           'nFilterIndex
-    'mTitle = "Open"                '
     mValidateNames = True      'OFN_NOVALIDATE
 End Sub
-Private Sub FNsColInitClear()
+Private Sub FileNames_Clear()
     Set mFileNames = New Collection
 End Sub
 
@@ -190,12 +217,23 @@ Private Sub InitFlags() 'in Modul ModCommonDialogs.bas
     'mFlags = mFlags Or OFN_SHOWHELP
     'mFlags = mFlags Or OFN_USEMONIKERS
 End Sub
+
 Friend Property Get flags() As Long
     flags = mFlags
 End Property
-Friend Property Let flags(FlgVal As Long)
-    mFlags = FlgVal
+Friend Property Let flags(ByVal Value As Long)
+    mFlags = Value
 End Property
+
+'Protected Overrides Function HookProc(ByVal hWnd As System.IntPtr, ByVal msg As Integer, ByVal wparam As System.IntPtr, ByVal lparam As System.IntPtr) As System.IntPtr
+'Protected Overrides Function RunDialog(ByVal hWndOwner As System.IntPtr) As Boolean
+'Public Function RunDialog(ByVal hwndOwner As Long) As Boolean
+'  'Set RunDialog = New Boolean
+'End Function
+'Public Function ToString() As String
+'    'Set ToString = New String
+'    'was soll hier ausgegeben werden?
+'End Function
 
 'Ruft einen Wert ab, oder legt diesen fest, der angibt,
 'ob einem Dateinamen im Dialogfeld automatisch eine Erweiterung
@@ -203,33 +241,25 @@ End Property
 Public Property Get AddExtension() As Boolean
     AddExtension = mAddExtension
 End Property
-Public Property Let AddExtension(BolVal As Boolean)
-    mAddExtension = BolVal
+Public Property Let AddExtension(ByVal Value As Boolean)
+    mAddExtension = Value
 End Property
 
 'Public Overrides Property CheckFileExists() As Boolean
-Public Property Get CheckFileExists() As Boolean       'OFN_FILEMUSTEXIST
-    'CheckFileExists = mCheckFileExists
+Public Property Get CheckFileExists() As Boolean              'OFN_FILEMUSTEXIST
     CheckFileExists = mFlags And OFN_FILEMUSTEXIST
 End Property
-Public Property Let CheckFileExists(BolVal As Boolean)       'OFN_FILEMUSTEXIST
-    'mCheckFileExists = BolVal
+Public Property Let CheckFileExists(ByVal Value As Boolean)   'OFN_FILEMUSTEXIST
     mFlags = mFlags Or OFN_FILEMUSTEXIST
-    If Not BolVal Then
-        mFlags = mFlags Xor OFN_FILEMUSTEXIST
-    End If
+    If Not Value Then mFlags = mFlags Xor OFN_FILEMUSTEXIST
 End Property
 
-Public Property Get CheckPathExists() As Boolean         'OFN_PATHMUSTEXIST
-     'CheckPathExists = mCheckPathExists
+Public Property Get CheckPathExists() As Boolean              'OFN_PATHMUSTEXIST
     CheckPathExists = mFlags And OFN_PATHMUSTEXIST
 End Property
-Public Property Let CheckPathExists(BolVal As Boolean)         'OFN_PATHMUSTEXIST
-    'mCheckPathExists = BolVal
+Public Property Let CheckPathExists(ByVal Value As Boolean)   'OFN_PATHMUSTEXIST
     mFlags = mFlags Or OFN_PATHMUSTEXIST
-    If Not BolVal Then
-        mFlags = mFlags Xor OFN_PATHMUSTEXIST
-    End If
+    If Not Value Then mFlags = mFlags Xor OFN_PATHMUSTEXIST
 End Property
 
 'Public Property DefaultExt() As String
@@ -241,30 +271,26 @@ Public Property Let DefaultExt(StrExt As String)
 End Property
 
 'Public Property DereferenceLinks() As Boolean
-Public Property Get DereferenceLinks() As Boolean       'OFN_NODEREFERENCELINKS
-    'DereferenceLinks = mDereferenceLinks
+Public Property Get DereferenceLinks() As Boolean             'OFN_NODEREFERENCELINKS
     DereferenceLinks = mFlags And OFN_NODEREFERENCELINKS
 End Property
-Public Property Let DereferenceLinks(BolVal As Boolean) 'OFN_NODEREFERENCELINKS
+Public Property Let DereferenceLinks(ByVal Value As Boolean)  'OFN_NODEREFERENCELINKS
     mFlags = mFlags Or OFN_NODEREFERENCELINKS
-    If BolVal Then
-        mFlags = mFlags Xor OFN_NODEREFERENCELINKS
-    End If
+    If Value Then mFlags = mFlags Xor OFN_NODEREFERENCELINKS
 End Property
+'Private Sub mDereferenceLinks_OnLet(ByVal sender As Object)
+'    Dim Value As Boolean: b = sender '???
+'    'If sender Is Boolean Then
+'    mFlags = mFlags Or OFN_NODEREFERENCELINKS
+'    'Achtung hier nicht Not !! weil: Not No 2*Verneinung
+'    If Value Then mFlags = mFlags Xor OFN_NODEREFERENCELINKS
+'End Sub
 
-'Public Property Let DereferenceLinks(BolVal As Boolean) 'OFN_NODEREFERENCELINKS
-'  mFlags = mFlags Or OFN_NODEREFERENCELINKS
-'  If BolVal Then
-'    mFlags = mFlags Xor OFN_NODEREFERENCELINKS
-'  End If
-'End Property
-
-'Public Property FileName() As String
 Public Property Get FileName() As String
     FileName = mFileName
 End Property
-Public Property Let FileName(StrFN As String)
-    mFileName = StrFN
+Public Property Let FileName(ByVal Value As String)
+    mFileName = Value
 End Property
 
 'Public ReadOnly Property FileNames() As String()
@@ -272,8 +298,8 @@ Public Property Get FileNames() As Collection 'ReadOnly nur Get
     Set FileNames = mFileNames
 End Property
 
-Private Sub GetFNsinCol(FNs As String)
-Dim i As Integer
+Private Sub FileNames_Parse(FNs As String)
+'Dim i As Integer
 Dim aa As String, bb As String, Path As String
 Dim PathFirst As Boolean
 Dim FirstFile As Boolean
@@ -281,7 +307,7 @@ Dim Pos As Long, X As Long, xOld As Long
 Dim FN As String
   PathFirst = False
   FirstFile = True
-  Call FNsColInitClear
+  FileNames_Clear
         
   'Schauen ob evt. nur eine Datei ausgewählt wurde
   Call TrimVBNullchar(FNs)
@@ -321,174 +347,165 @@ Dim FN As String
     mFileName = FN
   End If
 End Sub
-Private Sub TrimVBNullchar(ByRef StrVal As String) 'As String
-Dim i As Long
-Dim sepStr As String
-  For i = 1 To Len(StrVal)
-    sepStr = vbNullChar + vbNullChar
-    If Mid(StrVal, i, 2) = sepStr Then
-      StrVal = VBA.Left$(StrVal, i - 1)
-      Exit For
-    End If
-  Next
+Private Sub TrimVBNullchar(ByRef Value_out As String) 'As String
+    Dim sSep As String: sSep = vbNullChar + vbNullChar
+    Dim i As Long
+    For i = 1 To Len(Value_out)
+        If Mid(Value_out, i, 2) = sSep Then
+            Value_out = VBA.Left$(Value_out, i - 1)
+            Exit For
+        End If
+    Next
 End Sub
 
-'Public Property Filter() As String
 Public Property Get Filter() As String
-Dim i As Integer
-Dim StrFlt As String
-  StrFlt = mFilter
-  For i = 1 To Len(StrFlt)
-    If Mid(StrFlt, i, 1) = vbNullChar Then Mid(StrFlt, i, 1) = "|"
-  Next
-  Filter = StrFlt
+    Filter = Replace(mFilter, vbNullChar, "|")
+'    Dim i As Long
+'    Dim StrFlt As String
+'    StrFlt = mFilter
+'    For i = 1 To Len(StrFlt)
+'        If Mid(StrFlt, i, 1) = vbNullChar Then Mid(StrFlt, i, 1) = "|"
+'    Next
+'    Filter = StrFlt
 End Property
-Public Property Let Filter(StrVal As String)
-Dim i As Integer
-Dim StrFlt As String
-  StrFlt = StrVal
-  For i = 1 To Len(StrFlt)
-    If Mid(StrFlt, i, 1) = "|" Then Mid(StrFlt, i, 1) = vbNullChar
-  Next
-  If Not Right(StrFlt, 2) = vbNullChar + vbNullChar Then StrFlt = StrFlt + vbNullChar + vbNullChar
-  mFilter = StrFlt
+Public Property Let Filter(ByVal Value As String)
+    'Debug.Print Value
+    mFilter = Replace(Value, "|", vbNullChar) '& vbNullChar & vbNullChar
+    'Debug.Print mFilter
+'Dim i As Integer
+'Dim StrFlt As String
+'  StrFlt = StrVal
+'  Debug.Print StrFlt
+'  For i = 1 To Len(StrFlt)
+'    If Mid(StrFlt, i, 1) = "|" Then Mid(StrFlt, i, 1) = vbNullChar
+'  Next
+'  If Not Right(StrFlt, 2) = vbNullChar + vbNullChar Then StrFlt = StrFlt + vbNullChar + vbNullChar
+'  mFilter = StrFlt
+'  Debug.Print mFilter
 End Property
 
-'Public Property FilterIndex() As Integer
 Public Property Get FilterIndex() As Long
-  FilterIndex = mFilterIndex
+    FilterIndex = mFilterIndex
 End Property
-Public Property Let FilterIndex(IntVal As Long)
-  mFilterIndex = IntVal
+Public Property Let FilterIndex(ByVal Value As Long)
+    mFilterIndex = Value
 End Property
 
 'Ruft das Ausgangsverzeichnis ab, oder legt dieses fest
 Public Property Get InitialDirectory() As String       'lpstrInitialDir
-  InitialDirectory = mInitialDirectory
+    InitialDirectory = mInitialDirectory
 End Property
 Public Property Let InitialDirectory(StrVal As String) 'lpstrInitialDir
-  mInitialDirectory = StrVal
+    mInitialDirectory = StrVal
 End Property
 
-Public Property Get MultiSelect() As Boolean         'OFN_ALLOWMULTISELECT
-  MultiSelect = mFlags And OFN_ALLOWMULTISELECT
+'MultiSelect hat nur der Opendialog nicht im Savedialog möglich
+'ReadOnlyChecked hat nur der Opendialog nicht im Savedialog möglich
+Public Property Get MultiSelect() As Boolean                 'OFN_ALLOWMULTISELECT
+    MultiSelect = mFlags And OFN_ALLOWMULTISELECT
 End Property
-Public Property Let MultiSelect(BolVal As Boolean)   'OFN_ALLOWMULTISELECT
-  mFlags = mFlags Or OFN_ALLOWMULTISELECT
-  If Not BolVal Then
-    mFlags = mFlags Xor OFN_ALLOWMULTISELECT
-  End If
+Public Property Let MultiSelect(ByVal Value As Boolean)      'OFN_ALLOWMULTISELECT
+    mFlags = mFlags Or OFN_ALLOWMULTISELECT
+    If Not Value Then mFlags = mFlags Xor OFN_ALLOWMULTISELECT
 End Property
-
-Public Property Get ReadOnlyChecked() As Boolean       'OFN_READONLY
-  ReadOnlyChecked = mFlags And OFN_READONLY
+Public Property Get ReadOnlyChecked() As Boolean             'OFN_READONLY
+    ReadOnlyChecked = mFlags And OFN_READONLY
 End Property
-Public Property Let ReadOnlyChecked(BolVal As Boolean) 'OFN_READONLY
-  mFlags = mFlags Or OFN_READONLY
-  If Not BolVal Then
-    mFlags = mFlags Xor OFN_READONLY
-  End If
+Public Property Let ReadOnlyChecked(ByVal Value As Boolean)  'OFN_READONLY
+    mFlags = mFlags Or OFN_READONLY
+    If Not Value Then mFlags = mFlags Xor OFN_READONLY
 End Property
 
 'ruft einen Wert ab, oder legt diesen fest, der angibt,
-'ob das Dialogfeld das vor dem Schließen aktuelle Verzeichnis wiederherstellt,
-Public Property Get RestoreDirectory() As Boolean       'OFN_NOCHANGEDIR
-  RestoreDirectory = mFlags And OFN_NOCHANGEDIR
+'ob das Dialogfeld vor dem Schließen das aktuelle Verzeichnis wiederherstellt,
+Public Property Get RestoreDirectory() As Boolean            'OFN_NOCHANGEDIR
+    RestoreDirectory = mFlags And OFN_NOCHANGEDIR
 End Property
-Public Property Let RestoreDirectory(BolVal As Boolean) 'OFN_NOCHANGEDIR
-  mFlags = mFlags Or OFN_NOCHANGEDIR
-  If Not BolVal Then
-    mFlags = mFlags Xor OFN_NOCHANGEDIR
-  End If
+Public Property Let RestoreDirectory(ByVal Value As Boolean) 'OFN_NOCHANGEDIR
+    mFlags = mFlags Or OFN_NOCHANGEDIR
+    If Not Value Then mFlags = mFlags Xor OFN_NOCHANGEDIR
 End Property
 
-'Public Property ShowHelp() As Boolean
-Public Property Get ShowHelp() As Boolean           'OFN_SHOWHELP
-  ShowHelp = mFlags And OFN_SHOWHELP
+Public Property Get ShowHelp() As Boolean                    'OFN_SHOWHELP
+    ShowHelp = mFlags And OFN_SHOWHELP
 End Property
-Public Property Let ShowHelp(BolVal As Boolean)     'OFN_SHOWHELP
-  mFlags = mFlags Or OFN_SHOWHELP
-  If Not BolVal Then
-    mFlags = mFlags Xor OFN_SHOWHELP
-  End If
+Public Property Let ShowHelp(ByVal Value As Boolean)         'OFN_SHOWHELP
+    mFlags = mFlags Or OFN_SHOWHELP
+    If Not Value Then mFlags = mFlags Xor OFN_SHOWHELP
 End Property
 
-'Public Property ShowReadOnly() As Boolean
+'ShowReadOnly hat nur der Opendialog nicht im Savedialog möglich
 Public Property Get ShowReadOnly() As Boolean       'OFN_HIDEREADONLY
-  'ShowReadOnly = mShowReadOnly
-  ShowReadOnly = mFlags And OFN_HIDEREADONLY
+    ShowReadOnly = mFlags And OFN_HIDEREADONLY
 End Property
-Public Property Let ShowReadOnly(BolVal As Boolean) 'OFN_HIDEREADONLY
-  'mShowReadOnly = BolVal
-  mFlags = mFlags Or OFN_HIDEREADONLY
-  If BolVal Then
-    mFlags = mFlags Xor OFN_HIDEREADONLY
-  End If
+Public Property Let ShowReadOnly(ByVal Value As Boolean) 'OFN_HIDEREADONLY
+    mFlags = mFlags Or OFN_HIDEREADONLY
+    If Value Then mFlags = mFlags Xor OFN_HIDEREADONLY
 End Property
-'Private Sub mShowReadOnly_OnLet(ByVal sender As Object)
-'  mFlags = mFlags Or OFN_HIDEREADONLY
-'  If BolVal Then
-'    mFlags = mFlags Xor OFN_HIDEREADONLY
-'  End If
-'End Sub
 
-'wie schon hinlänglich bekann, füg einfach irgendwas hinzu
+'wie hinlänglich bekannt, füg einfach irgendwas hinzu
 'wird intern nicht verwendet, kann extern verwendet werden
-'Public Property Get Tag() As Object
 Public Property Get Tag() As Variant
-  Tag = mTag
+    Tag = mTag
 End Property
-Public Property Let Tag(VarVal As Variant)
-  mTag = VarVal
+Public Property Let Tag(Value As Variant)
+    mTag = Value
 End Property
 
 Public Function ToString() As String
-  ToString = "MBO.Windows.Forms.OpenFileDialog: " & "Title: " & mTitle & " , FileName: " & mFileName
+    ToString = "MBO.Windows.Forms.OpenFileDialog: " & "Title: " & mTitle & " , FileName: " & mFileName
 End Function
 
 Public Property Get Title() As String       'lpstrTitle
-  Title = mTitle
+    Title = mTitle
 End Property
 Public Property Let Title(StrVal As String) 'lpstrTitle
-  mTitle = StrVal
+    mTitle = StrVal
 End Property
 
 'ob das Dialogfeld nur gültige Win32-Dateinamen akzeptiert
-Public Property Get ValidateNames() As Boolean       'OFN_NOVALIDATE
-  ValidateNames = mFlags And OFN_NOVALIDATE
+Public Property Get ValidateNames() As Boolean            'OFN_NOVALIDATE
+    ValidateNames = mFlags And OFN_NOVALIDATE
 End Property
-Public Property Let ValidateNames(BolVal As Boolean) 'OFN_NOVALIDATE
-  mFlags = mFlags Or OFN_NOVALIDATE
-  If BolVal Then
-    mFlags = mFlags Xor OFN_NOVALIDATE
-  End If
+Public Property Let ValidateNames(ByVal Value As Boolean) 'OFN_NOVALIDATE
+    mFlags = mFlags Or OFN_NOVALIDATE
+    If Value Then mFlags = mFlags Xor OFN_NOVALIDATE
 End Property
+
+Private Function GethWnd(Frm As Variant) As LongPtr
+Try: On Error GoTo Catch
+    GethWnd = Frm.hwnd
+    Exit Function
+Catch:
+    GethWnd = GetActiveWindow
+End Function
+
+Private Function GethInst() As LongPtr
+#If VBA6 Or VBA7 Then
+    GethInst = App.hInstance
+#Else
+    GethInst = Application.hInstPtr
+#End If
+End Function
 
 Public Function ShowDialog(Optional Frm As Variant) As VbMsgBoxResult
 
 Try: On Error GoTo Catch
   
-    Dim myOwnerHwnd As Long
-    If Not IsMissing(Frm) Then
-        myOwnerHwnd = Frm.hwnd
-    Else
-        myOwnerHwnd = GetActiveWindow
-        'myOwnerHwnd = GetCenteredHwnd 'see below 'scheiße das bringt nix!!!
-        'myOwnerHwnd = GetDesktopWindow 'GetActiveWindow
-    End If
-    Dim myOwnerhInst As Long: myOwnerhInst = App.hInstance
+    Dim aOwnerhWnd  As LongPtr: aOwnerhWnd = GethWnd(Frm)
+    Dim aOwnerhInst As LongPtr: aOwnerhInst = GethInst
     
-    Dim mMaxLen As Long:  mMaxLen = 32767 - Len(mFileName)
-    Dim Buffer  As String: Buffer = mFileName & String$(mMaxLen, vbNullChar)
-    
+    Dim mMaxLen As Long:   mMaxLen = 32767 - Len(mFileName)
+    Dim Buffer  As String:  Buffer = mFileName & String$(mMaxLen, vbNullChar)
+    Dim aFilter As String: aFilter = mFilter & vbNullChar & vbNullChar
     Dim OFN As OPENFILENAMEW
     With OFN
         .lStructSize = LenB(OFN)
-        .hwndOwner = myOwnerHwnd
-        .hInstance = myOwnerhInst
-        .lpstrFilter = StrPtr(mFilter)
+        .hwndOwner = aOwnerhWnd
+        .hInstance = aOwnerhInst
+        .lpstrFilter = StrPtr(aFilter)
         '.lpstrCustomFilter = mDefaultExt
-        'nMaxCustFilter
+        '.nMaxCustFilter
         .nFilterIndex = mFilterIndex '(FilterIndex)
         .lpstrFile = StrPtr(Buffer)
         .nMaxFile = Len(Buffer) '32767
@@ -498,31 +515,30 @@ Try: On Error GoTo Catch
         .lpstrTitle = StrPtr(mTitle)
         .flags = mFlags
         'nFileOffset
-        'nFileExtension
-        .lpstrDefExt = StrPtr(mDefaultExt)
-        'lCustData
-        'lpfnHook
-        'lpTemplateName
+        'nFileExtension = 1
+        If mAddExtension Then
+            If Len(mDefaultExt) = 0 Then
+              '
+            End If
+            .lpstrDefExt = StrPtr(mDefaultExt)
+        End If
+        '.lCustData
+        '.lpfnHook
+        '.lpTemplateName
     End With
-    Dim Result As Long: Result = GetOpenFileName(OFN)
-    'Result = GetOpenFileNamePreview(OFN)
-    If Result <> 0 Then
+    Dim hr As Long: hr = GetOpenFileNameW(OFN) '<<<<<<------ here Get_*_OPEN_*_FileNameW
+    'hr = GetOpenFileNamePreview(OFN)
+    If hr Then
         'man muß am String erkennen, ob nur eine oder mehrere Dateien ausgewählt wurden
-        'Call GetFNsinCol(OFN.lpstrFile)
-        GetFNsinCol Buffer
+        FileNames_Parse Buffer
         ShowDialog = vbOK
     Else
         If mFlags And OFN_ALLOWMULTISELECT Then
-            'Call GetFNsinCol(OFN.lpstrFile)
-            GetFNsinCol Buffer
+            FileNames_Parse Buffer
         End If
         ShowDialog = vbCancel
         'oder zuviele Dateien
     End If
-Finally:
-    'Call DestroyWindow(myOwnerHwnd)
-    'Debug.Print "DestroyWindow " & myOwnerHwnd
-    On Error GoTo Catch
     Exit Function
 Catch:
     If Err.Number = 32755 Then
@@ -631,4 +647,3 @@ End Function
 '    OFD.Title()
 '    OFD.ToString()
 '    OFD.ValidateNames()
-
